@@ -7,6 +7,7 @@
   symmetry.
 + *scalapack.py*: Add documents for scalapack.py.
 *** Changed
++ *tetraku*: Density matrix of Heisenberg/tJ/Hubbard model are renamed to =gibbs_*= from =density_matrix_*=.
 *** Deprecated
 *** Removed
 *** Fixed
